@@ -1,3 +1,4 @@
+blibdirs
 ChangeLog
 inc/Date/Manip.pm
 inc/Module/Install.pm
@@ -9,9 +10,12 @@ inc/Module/Install/Makefile.pm
 inc/Module/Install/Metadata.pm
 inc/Module/Install/Win32.pm
 lib/WWW/Search/Ebay.pm
+lib/WWW/Search/Ebay/Auctions.pm
 lib/WWW/Search/Ebay/ByEndDate.pm
+lib/WWW/Search/Ebay/Stores.pm
 Makefile.PL
 MANIFEST			This list of files
 README
 t/basic.t
 t/enddate.t
+t/stores.t
