@@ -1,15 +1,14 @@
-# Ebay.pm
-# by Martin Thurn
-# $Id: Ebay.pm,v 2.144 2004/06/06 02:55:44 Daddy Exp $
+
+# $Id: Stores.pm,v 1.1 2004/06/06 02:54:13 Daddy Exp $
 
 =head1 NAME
 
-WWW::Search::Ebay - backend for searching www.ebay.com
+WWW::Search::Ebay::Stores - backend for searching eBay Stores
 
 =head1 SYNOPSIS
 
   use WWW::Search;
-  my $oSearch = new WWW::Search('Ebay');
+  my $oSearch = new WWW::Search('Ebay::Stores');
   my $sQuery = WWW::Search::escape_query("C-10 carded Yakface");
   $oSearch->native_query($sQuery);
   while (my $oResult = $oSearch->next_result())
@@ -26,9 +25,7 @@ be done through L<WWW::Search> objects.
 
 =head1 NOTES
 
-The search is done against CURRENT running AUCTIONS only.
-(NOT complete auctions, NOT eBay Stores items, NOT Buy-It-Now only items.)
-(If you want to search eBay Stores, use the WWW::Search::Ebay::Stores module.)
+The search is done against eBay Stores items only.
 
 The query is applied to TITLES only.
 
@@ -40,23 +37,9 @@ consists of a human-readable combination (joined with semicolon-space)
 of the Item Number; number of bids; and high bid amount (or starting
 bid amount).
 
-=head1 OPTIONS
-
-=over
-
-=item Search descriptions
-
-To search titles and descriptions, add 'srchdesc' => 'y' to the query options:
-
-  $oSearch->native_query($sQuery, { srchdesc => 'y' } );
-
-=back
-
 =head1 SEE ALSO
 
 To make new back-ends, see L<WWW::Search>.
-
-=head1 CAVEATS
 
 =head1 BUGS
 
@@ -64,114 +47,39 @@ Please tell the author if you find any!
 
 =head1 AUTHOR
 
-C<WWW::Search::Ebay> was written by Martin Thurn
+C<WWW::Search::Ebay::Stores> was written by Martin Thurn
 (mthurn@cpan.org).
-
-C<WWW::Search::Ebay> is maintained by Martin Thurn
-(mthurn@cpan.org).
-
-=head1 LEGALESE
-
-THIS SOFTWARE IS PROVIDED "AS IS" AND WITHOUT ANY EXPRESS OR IMPLIED
-WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF
-MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 
 =cut
 
-#####################################################################
+package WWW::Search::Ebay::Stores;
 
-package WWW::Search::Ebay;
-
-@ISA = qw( WWW::Search );
-
-use Carp ();
-use Data::Dumper;  # for debugging only
-use WWW::Search qw( generic_option strip_tags );
-use WWW::Search::Result;
-
-$VERSION = do { my @r = (q$Revision: 2.144 $ =~ /\d+/g); sprintf "%d."."%03d" x $#r, @r };
-$MAINTAINER = 'Martin Thurn <mthurn@cpan.org>';
+use WWW::Search::Ebay;
+use vars qw( @ISA $VERSION );
+@ISA = qw( WWW::Search::Ebay );
+$VERSION = do { my @r = (q$Revision: 1.1 $ =~ /\d+/g); sprintf "%d."."%03d" x $#r, @r };
 
 sub native_setup_search
   {
-  my ($self, $native_query, $rhOptsArg) = @_;
-
-  # Set some private variables:
-  $self->{_debug} ||= $rhOptsArg->{'search_debug'};
-  $self->{_debug} = 2 if ($rhOptsArg->{'search_parse_debug'});
-  $self->{_debug} ||= 0;
-
-  my $DEFAULT_HITS_PER_PAGE = 100;
-  $self->{'_hits_per_page'} = $DEFAULT_HITS_PER_PAGE;
-
-  $self->user_agent('non-robot');
-
-  $self->{'_next_to_retrieve'} = 0;
-  $self->{'_num_hits'} = 0;
-
-  $self->{search_host} = 'http://search.ebay.com';
-  $self->{search_path} = '/ws/search/SaleSearch';
-  if (!defined($self->{_options}))
-    {
-    $self->{_options} = {
-                         'satitle' => $native_query,
-                         # Search AUCTIONS ONLY:
-                         'sasaleclass' => 1,
+  my ($self, $sQuery, $rh) = @_;
+  # http://search.stores.ebay.com/ws/search/StoreItemSearch?from=R10&sasaleclass=2&satitle=star+wars+lego&sbrexp=WD1S&sbrhrlink=str&sif=1&socolumnlayout=3&sofp=4&sosortorder=1&sosortproperty=1
+  # http://search.stores.ebay.com/search/search.dll?GetResult&satitle=star+wars+lego&sosortorder=2&sosortproperty=2
+  # http://search.stores.ebay.com/ws/search/StoreItemSearch?sasaleclass=2&satitle=dupondius
+  $self->{'_options'} = {
+                         'GetResult' => 1,
+                         'satitle' => $sQuery,
+                         'sosortproperty' => 2,
+                         'sosortorder' => 2,
+                         'sasaleclass' => 2,
                          # Display item number explicitly:
                          'socolumnlayout' => 2,
-                         # Do not convert everything to US$:
-                         'socurrencydisplay' => 1,
-                         'sorecordsperpage' => $self->{_hits_per_page},
-                         # Display absolute times, NOT relative times:
-                         'sotimedisplay' => 1,
                         };
-    } # if
-  if (defined($rhOptsArg))
-    {
-    # Copy in new options.
-    foreach my $key (keys %$rhOptsArg)
-      {
-      # print STDERR " +   inspecting option $key...";
-      if (WWW::Search::generic_option($key))
-        {
-        # print STDERR "promote & delete\n";
-        $self->{$key} = $rhOptsArg->{$key} if defined($rhOptsArg->{$key});
-        delete $rhOptsArg->{$key};
-        }
-      else
-        {
-        # print STDERR "copy\n";
-        $self->{_options}->{$key} = $rhOptsArg->{$key} if defined($rhOptsArg->{$key});
-        }
-      } # foreach
-    } # if
-
-  # Finally, figure out the url.
-  $self->{_next_url} = $self->{'search_host'} . $self->{'search_path'} .'?'. $self->hash_to_cgi_string($self->{_options});
+  $rh->{'search_host'} = 'http://search.stores.ebay.com';
+  $rh->{'search_path'} = '/ws/search/StoreItemSearch';
+  return $self->SUPER::native_setup_search($sQuery, $rh);
   } # native_setup_search
 
 
-sub preprocess_results_page_OFF
-  {
-  my $self = shift;
-  my $sPage = shift;
-  # Ebay used to send malformed HTML:
-  # my $iSubs = 0 + ($sPage =~ s!</FONT></TD></FONT></TD>!</FONT></TD>!gi);
-  # print STDERR " +   deleted $iSubs extraneous tags\n" if 1 < $self->{_debug};
-  # For debugging:
-  print STDERR $sPage;
-  exit 88;
-  return $sPage;
-  } # preprocess_results_page
-
-
-sub currency_pattern
-  {
-  # A pattern to match all possible currencies found in eBay listings:
-  return qr/(?:\$|C|EUR|GBP)/;
-  } # currency_pattern
-
-# private
 sub parse_tree
   {
   my $self = shift;
@@ -180,9 +88,9 @@ sub parse_tree
   # A pattern to match HTML whitespace:
   my $W = q{[\ \t\r\n\240]};
   my $hits_found = 0;
-  # The hit count is in a FONT tag:
+  # The hit count is in a TD tag:
   my @aoFONT = $tree->look_down('_tag' => 'td',
-                                width => '99%',);
+                                valign => 'top',);
  FONT:
   foreach my $oFONT (@aoFONT)
     {
@@ -193,6 +101,7 @@ sub parse_tree
       last FONT;
       } # if
     } # foreach
+
   my $currency = $self->currency_pattern;
   # The list of matching items is in a table.  The first column of the
   # table is nothing but icons; the second column is the good stuff.
@@ -205,17 +114,20 @@ sub parse_tree
     {
     # Sanity check:
     next TD unless ref $oTD;
-    my $iItemNum = $oTD->as_text;
     my $sTD = $oTD->as_HTML;
-    print STDERR " + try TD ===$sTD===\n" if 1 < $self->{_debug};
     $oTD = $oTD->right;
+    next TD unless ref $oTD;
+    print STDERR " + try TD ===$sTD===\n" if 1 < $self->{_debug};
     # First A tag contains the url & title:
     my $oA = $oTD->look_down('_tag', 'a');
     next TD unless ref $oA;
     my $sURL = $oA->attr('href');
     next TD unless $sURL =~ m!ViewItem!;
+    my $iItemNum = 0;
+    $iItemNum = $1 if ($sURL =~ m!item=(\d+)!);
+    next TD unless ($iItemNum != 0);
     my $sTitle = $oA->as_text;
-    my ($iPrice, $iBids, $sDate) = ('$unknown', 'no', 'unknown');
+    my ($iPrice, $iBids, $sDate) = ('$unknown', 'Buy-It-Now', 'unknown');
     # The rest of the info about this item is in sister TD elements to
     # the right:
     my @aoSibs = $oTD->right;
@@ -231,26 +143,9 @@ sub parse_tree
       $iPrice = $oTDprice->as_text;
       $iPrice =~ s!(\d)$W*($currency$W*[\d.,]+)!$1 (Buy-It-Now for $2)!;
       } # if
-    # The next sister has the number of bids:
+    # The next sister has the "Buy-It-Now" icon:
     my $oTDbids = shift @aoSibs;
-    if (ref $oTDbids)
-      {
-      if (1 < $self->{_debug})
-        {
-        my $s = $oTDbids->as_HTML;
-        print STDERR " +   TDbids ===$s===\n";
-        } # if
-      $iBids = $oTDbids->as_text;
-      } # if
-    # Bid listed as hyphen means no bids:
-    $iBids = 'no' if $iBids =~ m!\A$W*-$W*\Z!;
-    # Bid listed as whitespace means no bids:
-    $iBids = 'no' if $iBids =~ m!\A$W*\Z!;
-    my $sDesc = "Item \043$iItemNum; $iBids bid";
-    $sDesc .= 's' if $iBids ne '1';
-    $sDesc .= '; ';
-    $sDesc .= 'no' ne $iBids ? 'current' : 'starting';
-    $sDesc .= " bid $iPrice";
+    my $sDesc = "Item \043$iItemNum; Buy-It-Now for $iPrice";
     # The last sister has the auction start date:
     my $oTDdate = pop @aoSibs;
     if (ref $oTDdate)
@@ -305,4 +200,3 @@ sub parse_tree
 1;
 
 __END__
-
